# Tkinter_projects

./: README.md
Calc/: main.py
Calculadora/: main.py  pyproject.toml
