[tool.poetry]
name = "Calc Tkinter"
version = "0.1.0"
description = "Projeto com a biblioteca Tkinter"
authors = ["Miguel Tenório <>"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
